--- a/Views/Home/EditStudent.cshtml
+++ b/Views/Home/EditStudent.cshtml
@@ -17,14 +17,32 @@
         <input type="text" name="Lastname" value="@Model.LastName" id="pN" class="form-control" />
     </div>
 
-    <div class="form-group">
-        Remove Courses
-    @foreach (var item in Model.Courses)
+    if (Model.Courses != null && Model.Courses.Count > 0)
     {
-            <label for="@item.CourseName">@item.CourseName</label>
-            <input type="checkbox" name="Courses" value="@item.CourseId" id="@item.CourseName" class="form-control"/> 
+        <div class="form-group">
+            <h3>Remove Courses <br /></h3>
+        @foreach (var item in Model.Courses)
+        {
+                <label for="@item.CourseName">@item.CourseName</label>
+                <input type="checkbox" name="Courses" value="@item.CourseId" id="@item.CourseName" class="form-control"/> 
+                <br />
+        }
+        </div>
     }
-    </div>
+
+    if (Model.Assignments != null && Model.Assignments.Count > 0)
+    {
+        <div>
+            <h3>Assignments <br /></h3>
+        @foreach (var item in Model.Assignments)
+	    {
+		            <div>@item.AssignmentSubject</div>
+                    <div>@item.AssignmentBody</div>
+                    <br />
+	    }   
+        </div>
+    }
+
     <div class="form-group">
         <label for="aC">Add a Course by Name</label>
         <input type="text" name="AddCourse" value="" id="aC" class="form-control" />
