--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Courses", "About", "Home")</li>
-                    <li>@Html.ActionLink("Add", "Add", "Home")</li>
+                    <li>@Html.ActionLink("Edit", "EditAll", "Home")</li>
+                    <li>@Html.ActionLink("Add", "AddAll", "Home")</li>
                 </ul>
             </div>
         </div>
